<resources>
    <string name="app_name">AstroMatch</string>
    <string name="birthdays">Birthdays</string>
    <string name="profile">Profile</string>
    <string name="match">Match</string>
    <string name="settings_big">SETTINGS</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_big">CANCEL</string>
    <string name="share">Share</string>
    <string name="share_big">SHARE</string>
    <string name="name_surname">Name surname</string>
    <string name="fullname">Fullname</string>
    <string name="date">Date</string>
    <string name="gift_idea">Gift Idea</string>
    <string name="apply">Apply</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_app_title_normal">AstroMatch</string>
    <string name="login_app_title_big">ASTROMATCH</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="gift_idea_details">Clothes,Watch,Toy etc.</string>
    <string name="user_degree">User Degree</string>
    <string name="birthdays_uppercase">BIRTHDAYS</string>
    <string name="birthdays_gift_ideas">GIFT IDEAS</string>
    <string name="everyone">Everyone</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="bros">Bros</string>
    <string name="work">Work</string>
    <string name="colleagues">Colleagues</string>
    <string name="acquaintances">Acquaintances</string>
    <string name="partner">Partner</string>
    <string name="vip">VIP</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="select_birthday">Please select birthdate.</string>
    <string name="text_name_surname">Please text name and surname</string>
    <string name="add_birthday">Add Birthday</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_birthday">Update Birthday</string>
    <string name="no_added_birthday">There is no added birthday. \n Press + button and add new birthday</string>
    <string name="datas_updated">Informations has been updated.</string>
    <string name="delete_birthday">Delete Birthday</string>
    <string name="delete_birthday_ask">Are you sure to delete the birthday?</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="birthdate">Birthdate</string>
    <string name="birthday_gift_idea_description">You can view the other users saved gift idea.</string>
    <string name="dont_have_account">Do not you have account?</string>
    <string name="continue_without_account_big">CONTINUE WITHOUT ACCOUNT</string>
    <string name="not_empty_password_fields">Please fill password fields.</string>
    <string name="not_empty_email_field">Please fill email field.</string>
    <string name="not_empty_fullname_field">Please fill fullname field.</string>
    <string name="not_empty_birthday_field">Please fill birthday field.</string>
    <string name="not_empty_birthTime_field">Please fill birth time field.</string>
    <string name="not_empty_biography_field">Please fill profile biography field.</string>
    <string name="not_empty_gender_field">Please select your gender.</string>
    <string name="not_empty_profile_photo_field">Please select your profile photo.</string>
    <string name="not_match_passwords">Passwords do not match.</string>
    <string name="password_charachters_at_least_six">Passwords should be at least 6 characters.</string>
    <string name="email_already_using">The email address is already in use by another account.</string>
    <string name="register_successfull">Register operation has completed successfully.</string>
    <string name="fill_all_place">Please fill all places.</string>
    <string name="fill_option_place">Please fill option place.</string>
    <string name="login_successfull">Login Successful!</string>
    <string name="something_wrong">Something went wrong. PLease try again.</string>
    <string name="something_wrong_email_pw">Something went wrong. Please login with email and password.</string>
    <string name="post_sharing_waiting">Your post is sharing. \n Please wait.</string>
    <string name="post_shared">Your post was shared successfully.</string>
    <string name="photo_message_send_waiting">Your image message is sending. \n Please wait.</string>
    <string name="photo_message_sent">Your image message was sent successfully.</string>
    <string name="options_at_least_two_item">You should add at least 2 options item.</string>
    <string name="your_message_sended">Your message has sent.</string>
    <string name="account">Account</string>
    <string name="theme">Theme</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="contact">Contact</string>
    <string name="your_post">Your Posts</string>
    <string name="user_posts">User Posts</string>
    <string name="no_post_here">There is no post here.</string>
    <string name="no_photo_here">There is no photo here.</string>
    <string name="no_answer_here">There is no answer here.</string>
    <string name="answer">answer</string>
    <string name="answers">answers</string>
    <string name="no_answer">There is no answer.</string>
    <string name="answers_big">ANSWERS</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="yes">YES</string>
    <string name="account_big">ACCOUNT</string>
    <string name="change_photo_big">CHANGE PHOTO</string>
    <string name="data_updating">Your data is updating. \n Please wait.</string>
    <string name="select_gender">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="profile_bio">Profile Biography</string>
    <string name="biography">Biography</string>
    <string name="age">Age</string>
    <string name="photos">Photos</string>
    <string name="view_all">View All</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="select_profile_gallery_photo">Select Profile Gallery Photos</string>
    <string name="your_account_registering">Your account is registering. \n Please wait.</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_photo_big">ADD PHOTO</string>
    <string name="profile_gallery">Profile Gallery</string>
    <string name="profile_gallery_big">PROFILE GALLERY</string>
    <string name="your_horoscope">Your \n Horoscope</string>
    <string name="another_horoscope">Another \n Horoscope</string>
    <string name="compliance_rate">Compliance \n Rate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="sign_in_or_register">Sign in or register</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="home">Home</string>
    <string name="social">Social</string>
    <string name="social_gift_ideas">SOCIAL GIFT IDEAS</string>
    <string name="profile_toolbar">PROFILE</string>
    <string name="birth_time">Birth Time</string>
    <string name="joined_at">Joined At</string>
    <string name="make_survey">Make Survey</string>
    <string name="make_survey_big">MAKE SURVEY</string>
    <string name="ask_question">Ask Question</string>
    <string name="ask_question_big">ASK QUESTION</string>
    <string name="select_image_optional">Select Image(Optional)</string>
    <string name="write_message">Write Message</string>
    <string name="add_option_at_least_two_options">Add Options(At least 2 options)</string>
    <string name="option_colon">Option:</string>
    <string name="option">Option</string>
    <string name="reply_big">REPLY</string>
    <string name="more_big">MORE</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="visitors">Visitors</string>
    <string name="visitors_mock">0 \n Visitors</string>
    <string name="profile_visitors_big">PROFILE VISITORS</string>
    <string name="image_file">Image File</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/9214589741</string>
    <string name="ad_native_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_interstitial_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="ad_rewarded_id">ca-app-pub-3940256099942544/5354046379</string>
    <string name="horoscope_compatibility_title">HOROSCOPE COMPATIBILITY</string>
    <string name="calculate_compatibility">Calculate Compatibility</string>
    <string name="your_name_label">Your name:</string>
    <string name="your_name">Your name</string>
    <string name="your_birthdate_label">Your Birthdate:</string>
    <string name="your_birthdate">Your Birthdate</string>
    <string name="another_person_name_label">Another Person \n Name:</string>
    <string name="another_person_name">Another Person Name</string>
    <string name="another_person_birthdate_label">Another Person \n Birthdate:</string>
    <string name="another_person_birthdate">Another Person Birthdate</string>
    <string name="short_analysis">Short Analysis</string>
    <string name="detailed_analysis">Detailed Analysis</string>
    <string name="analyse_data_sending">Analysing data\'s are sending. \n Please wait</string>
    <string name="analysis_detail">ANALYSIS DETAIL</string>
    <string name="user_filter">User Filter</string>
    <string name="user_horoscope">User Horoscope</string>
    <string name="user_gender">User Gender</string>
    <string name="user_age">User Age</string>
    <string name="last_login_time_title">Last Login Time: </string>
    <string name="forgot_password_title">FORGOT PASSWORD</string>
    <string name="enter_email_to_reset">Enter your email address to send reset email.</string>
    <string name="enter_email_to_reset_edittext">Enter your email address.</string>
    <string name="reset_mail_sent">Your password reset mail has sent. Check your email.</string>
    <string name="email_wrong">Email address is wrong. Please check it.</string>
    <string name="check_email_password">Error in login. Check your email or password.</string>
    <string name="send_big">SEND</string>
    <string name="delete_account_title">Are you sure to delete account?</string>
    <string name="delete_account_text">Do you really delete your account? \n This process cannot be undone.</string>
    <string name="delete_account_btn_delete">Yes, Delete</string>
    <string name="delete_account_btn_keep">Keep Account</string>
    <string name="account_deleted">Your account is deleted.</string>
    <string name="notify_category_spam">Spam and Advertising</string>
    <string name="notify_category_harassment">Harassment and Bullying</string>
    <string name="notify_category_hate_speech">Hate Speech and Discrimination</string>
    <string name="notify_category_misinformation">Misinformation and Fraud</string>
    <string name="notify_category_nudity">Nudity and Sexual Content</string>
    <string name="notify_category_fake_profile">Fake Profile and Impersonation</string>
    <string name="notify_category_privacy_violation">Privacy Violation and Data Sharing</string>
    <string name="notify_category_violence">Violence and Threats</string>
    <string name="next">Next</string>
    <string name="onboarding_title_third">Message &amp; Connect Socially</string>
    <string name="onboarding_text_third">Stay connected with your matches. Send messages and create meaningful social connections.</string>
</resources>