<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/birthdays_background"
    tools:context=".ui.fragment.login.LoginFragment">

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/email"

        android:inputType="text"
        android:textColor="@color/text_black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintStart_toStartOf="@+id/textViewLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginEmail" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text_black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintStart_toStartOf="@+id/textViewLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginPassword" />

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/oleo_script"
        android:text="@string/birthdays_uppercase"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLoginSignIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/muli_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/text_white"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />

    <Button
        android:id="@+id/buttonLoginRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/muli_semibold"
        android:text="@string/register"
        android:textColor="@color/text_white"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoginSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonLoginSignIn"
        app:layout_constraintTop_toBottomOf="@+id/textViewDontYouHaveAccount" />

    <TextView
        android:id="@+id/textViewLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito"
        android:text="@string/email"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginTitle" />

    <TextView
        android:id="@+id/textViewLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito"
        android:text="@string/password"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail" />

    <TextView
        android:id="@+id/textViewDontYouHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito"
        android:text="@string/dont_have_account"
        android:textColor="#3C3535"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoginSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonLoginSignIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginSignIn" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/continue_without_account_big"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoginRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonLoginRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>